--- a/src/Makefile
+++ b/src/Makefile
@@ -15,7 +15,7 @@ LIBS       = -lpthread -lstdc++ -ldl
 STATIC     = /usr/lib64/liblz4.a
 
 # disable for prod version
-# CXXFLAGS  += -D__DEBUG
+CXXFLAGS  += -D__DEBUG
 
 all: qdda
 
