--- a/src/Makefile
+++ b/src/Makefile
@@ -26,10 +26,10 @@ all: qdda
 qdda: qdda.o database.o tools.o output.o threads.o helptext.o $(OBJECTS)
 	g++ $(LDFLAGS) qdda.o database.o tools.o helptext.o threads.o output.o $(OBJECTS) $(LIBS) -o qdda 
 
-qdda.o: qdda.cpp tools.h qdda.h database.h
+qdda.o: qdda.cpp tools.h qdda.h database.h error.h
 	g++ -c $(CXXFLAGS) $(CFLAGS) qdda.cpp
 
-database.o: database.cpp tools.h qdda.h database.h
+database.o: database.cpp tools.h qdda.h database.h error.h
 	g++ -c $(CXXFLAGS) $(CFLAGS) database.cpp
 
 lz4.o: lz4/lz4.c lz4/lz4.h
@@ -38,16 +38,16 @@ lz4.o: lz4/lz4.c lz4/lz4.h
 md5.o: md5/md5.c md5/md5.h
 	g++ -c $(CFLAGS) md5.c
 
-sqlite3.o: sqlite/sqlite3.c sqlite/sqlite3.h
+sqlite3.o: sqlite/sqlite3.c sqlite/sqlite3.h error.h
 	g++ -c $(CFLAGS) sqlite3.c
 
-tools.o: tools.cpp tools.h
+tools.o: tools.cpp tools.h error.h
 	g++ -c $(CXXFLAGS) $(CFLAGS) tools.cpp
 
-threads.o: threads.cpp tools.h database.h threads.h qdda.h
+threads.o: threads.cpp tools.h database.h threads.h qdda.h error.h
 	g++ -c $(CXXFLAGS) $(CFLAGS) threads.cpp
 
-output.o: output.cpp tools.h database.h
+output.o: output.cpp tools.h database.h error.h
 	g++ -c $(CXXFLAGS) $(CFLAGS) output.cpp
 
 helptext.o: helptext.cpp
